fix overlapping footnotes, add clicked state to font size changer

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -147,6 +147,19 @@
   html[data-theme="grey"] .sticky-chapter-header {
     @apply text-grey;
   }
+
+  button.shadow:hover {
+    @apply shadow-hover transition-shadow;
+  }
+
+  button.shadow:hover {
+    @apply transition-shadow;
+  }
+
+  .pulse {
+    stroke: var(--blue);
+    filter: drop-shadow(0px 0px 2px var(--colour-primary));
+  }
 }
 
 /* hide backnote button on footnotes thats autogenerated by github flavoured markdown */
